clusters/managed/llm/open-webui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app open-webui-ingress
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://llms.trusted.nirmalhk7.com"
    gethomepage.dev/group: LLMs and AI
    gethomepage.dev/description: "LLM chat workspace"
    gethomepage.dev/icon: "open-webui-light"
    gethomepage.dev/app: "open-webui" # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Open WebUI"
    gethomepage.dev/weight: "10"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=open-webui,app.kubernetes.io/component=open-webui"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`llms.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: open-webui 
          port: 80
